# gst-plugins-base

./: .gitignore  meson.build  meson_options.txt
ext/: meson.build
ext/alsa/: meson.build
ext/cdparanoia/: meson.build
ext/libvisual/: meson.build  visual.c
ext/ogg/: meson.build
ext/opus/: gstopusdec.c  gstopusdec.h  gstopusenc.c  meson.build
ext/pango/: meson.build
ext/theora/: meson.build
ext/vorbis/: meson.build
gst/: meson.build
gst-libs/gst/: meson.build
gst-libs/gst/allocators/: meson.build
gst-libs/gst/app/: gstappsink.c  gstappsrc.c  meson.build
gst-libs/gst/audio/: audio_mkenum.py  gstaudioencoder.c  meson.build
gst-libs/gst/fft/: kiss_fft_s16.h  kiss_fft_s32.h  meson.build
gst-libs/gst/pbutils/: meson.build  pbutils_mkenum.py
gst-libs/gst/riff/: meson.build
gst-libs/gst/rtp/: meson.build  rtp_mkenum.py
gst-libs/gst/rtsp/: meson.build  rtsp_mkenum.py
gst-libs/gst/sdp/: meson.build
gst-libs/gst/tag/: meson.build
gst-libs/gst/video/: meson.build  video_mkenum.py
gst/adder/: meson.build
gst/app/: meson.build
gst/audioconvert/: meson.build
gst/audiorate/: meson.build
gst/audioresample/: meson.build
gst/audiotestsrc/: meson.build
gst/encoding/: meson.build
gst/gio/: meson.build
gst/playback/: meson.build
gst/subparse/: meson.build
gst/tcp/: meson.build
gst/typefind/: meson.build
gst/videoconvert/: meson.build
gst/videorate/: meson.build
gst/videoscale/: meson.build
gst/videotestsrc/: meson.build
gst/volume/: meson.build
sys/: meson.build
sys/ximage/: meson.build
sys/xvimage/: meson.build
tests/: meson.build
tests/check/: meson.build
tools/: meson.build
